# MSHost-alpha

./: CMakeLists.txt  README.md  config.json  launch.bat
backup/src/0.2.7a/: Logger.h  MinecraftServerManager.cpp  MinecraftServerManager.h  config.json  httpServer.cpp  httpServer.h  launch.bat  main.cpp
backup/src/0.2.7a/www/: index.html  main.js  unobfs.js
backup/src/0.3.0a/: Logger.h  MSHost.lnk  MinecraftServerManager.cpp  MinecraftServerManager.h  config.json  httpServer.cpp  httpServer.h  launch.bat  launch_args.txt  main.cpp  tokens
backup/src/0.3.0a/caddy/: Caddyfile
backup/src/0.3.0a/www/: index.html
backup/src/0.3.0a/www/assets/css/: index.css
backup/src/0.3.0a/www/assets/js/: unobfs.js
backup/www/: index.html
backup/www/assets/css/: index.css
backup/www/assets/js/: unobfs.js
caddy/: Caddyfile
site/: auth.html  index.html
site/assets/css/: index.css
site/assets/js/: unobfs.js
src/: httpServer.cpp  main.cpp  minecraftservermanager.cpp
src/WIP/: rcon_client.cpp  rcon_client.h
src/includes/: httpServer.h  logger.h  minecraftservermanager.h
